# wellformed

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  release-plz.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-pages.yml  npm-release.yml  release-plz.yml
conformance/: README.md
conformance/cases/: crossfield-eq-int-vs-float.json  enum-number-int-vs-float.json  enum-number-unsafe-integer-js-portable.json  error-code-required.json  format-decimal-half-rounding.json  format-decimal-huge-magnitude.json  format-decimal-multiply-round.json  format-decimal-negative-half.json  literal-number-int-vs-float.json  money-to-cents-negative-half.json  money-to-cents-overflow.json  money-transform-unparseable.json  recursive-ref-schema.json  ref-not-found.json  ref-true-cycle.json  string-email-valid.json  string-minlen-invalid.json  string-unicode-scalar-length.json
fuzz/: Cargo.toml  README.md  fuzz.mjs
fuzz/corpus/serde_schema/: basic.json
fuzz/corpus/validate_json/: basic.json
fuzz/fuzz_targets/: serde_schema.rs  validate_json.rs
scripts/: release-preflight.sh  verify-public-release.sh
typescript/: .gitignore  biome.json  package.json  pnpm-lock.yaml  turbo.json
typescript/.changeset/: README.md  bright-forms-build.md  config.json
typescript/apps/docs/: .gitignore  components.json  package.json  react-router.config.ts  source.config.ts  vite.config.ts
typescript/apps/docs/app/: app.css  mdx-components.tsx  root.tsx  routes.ts
typescript/apps/docs/app/components/: logo-mark.tsx
typescript/apps/docs/app/components/docs/: playground-button.tsx
typescript/apps/docs/app/components/landing/: code-showcase.tsx
typescript/apps/docs/app/components/playground/: code-preview.tsx  field-renderer.tsx  form-preview.tsx  generate-code.ts  playground-client.tsx  preset-selector.tsx  presets.ts  schema-editor.tsx  validation-summary.tsx
typescript/apps/docs/app/components/ui/: card.tsx  checkbox.tsx  field.tsx  input.tsx  select.tsx
typescript/apps/docs/app/lib/: layout.shared.tsx  seo.ts  shared.ts  source.ts  wellformed-resolver.ts
typescript/apps/docs/app/llms/: full.ts  mdx.ts
typescript/apps/docs/app/routes/: docs.tsx  home.tsx  not-found.tsx  playground.tsx  search.ts
typescript/apps/docs/content/docs/: ai-integration.mdx  axum.mdx  comparison.mdx  faq.mdx  getting-started.mdx  index.mdx  ir-schema.mdx  meta.json  performance.mdx  predicates.mdx  production.mdx  recipes.mdx  rust-runtime.mdx  serialization.mdx  transforms.mdx  type-inference.mdx  validation.mdx  why-wellformed.mdx
typescript/apps/docs/content/docs/builder/: arrays.mdx  cross-field-rules.mdx  enums-unions.mdx  meta.json  numbers.mdx  objects.mdx  strings.mdx
typescript/apps/docs/public/: robots.txt  site.webmanifest  sitemap.xml
typescript/apps/docs/scripts/: check-links.mjs  relocate-md.mjs
wellformed/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
wellformed-macros/: CHANGELOG.md  Cargo.toml  README.md
wellformed-macros/src/: lib.rs
wellformed-macros/test_schemas/: simple.json
wellformed-macros/tests/: codegen_test.rs
wellformed-validate/: CHANGELOG.md  Cargo.toml  README.md
wellformed-validate/benches/: batch_validation.rs  pattern_matching.rs  tin_validation.rs
wellformed-validate/src/: batch.rs  error.rs  lib.rs  patterns.rs  registry.rs  tin.rs
wellformed/benches/: predicates.rs
wellformed/docs/: design.md
wellformed/examples/: fuzz_driver.rs
wellformed/src/: error.rs  form.rs  interop_test.rs  lib.rs  path.rs
wellformed/src/codegen/: api.rs  api_types.rs  mod.rs  rust.rs  util.rs
wellformed/src/ir/: error.rs  mod.rs  predicate.rs  schema.rs  transform.rs  types.rs
wellformed/src/runtime/: mod.rs  transform.rs  validate.rs
wellformed/src/runtime/predicate/: address.rs  amount.rs  aviation.rs  color.rs  contact.rs  crypto.rs  date.rs  financial.rs  insurance.rs  mod.rs  numeric.rs  reference.rs  registry.rs  text.rs  tin.rs
wellformed/tests/: conformance.rs  properties.rs
