[package]
name = "wellformed-validate"
version = "0.1.1"
edition = "2021"
rust-version = "1.93.0"
description = "High-performance validation primitives for wellformed schemas"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hariria/wellformed"
homepage = "https://wellformed.net"
documentation = "https://docs.rs/wellformed-validate"
keywords = ["validation", "schema", "simd", "tin"]
categories = ["data-structures", "development-tools"]

[features]
default = ["simd"]
simd = []
vectorscan = ["dep:vectorscan-rs"]  # SIMD regex - builds vectorscan 5.4.11 from source
nightly = []  # Enable nightly SIMD features

[dependencies]
# Vectorscan for high-performance regex (optional)
# Builds from source - requires cmake
vectorscan-rs = { version = "0.0.5", optional = true }

# For portable SIMD on stable
wide = "0.7"

# Core utilities
thiserror = "2.0"
memchr = "2.7"  # SIMD-accelerated byte searching

# Regex fallback when vectorscan is not available
regex = "1.10"

# For the registry
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional rayon for parallel batch processing
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tin_validation"
harness = false

[[bench]]
name = "batch_validation"
harness = false

[[bench]]
name = "pattern_matching"
harness = false
